--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'pstoolbox'
+include ':http-server-react-native'
+project(':http-server-react-native').projectDir = new File(rootProject.projectDir, '../node_modules/http-server-react-native/android')
 include ':react-native-http-bridge'
 project(':react-native-http-bridge').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-http-bridge/android')
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
